[gd_scene load_steps=47 format=3 uid="uid://ds2bhpdu2wk15"]

[ext_resource type="Script" path="res://Scenes/StartMenu/start_menu.gd" id="1_2w4ik"]
[ext_resource type="Texture2D" uid="uid://cejpxsxr3r5ic" path="res://Scenes/StartMenu/logo.png" id="2_676j5"]
[ext_resource type="Theme" uid="uid://cl5dwigu7j6fe" path="res://Themes/default_theme.tres" id="3_aap2y"]

[sub_resource type="VisualShaderNodeVectorDecompose" id="VisualShaderNodeVectorDecompose_hpj56"]
default_input_values = [0, Vector2(0, 0)]
op_type = 0

[sub_resource type="VisualShaderNodeVectorCompose" id="VisualShaderNodeVectorCompose_251it"]
op_type = 0

[sub_resource type="VisualShaderNodeFloatOp" id="VisualShaderNodeFloatOp_4eff3"]
default_input_values = [0, 0.0, 1, 9.415]

[sub_resource type="VisualShaderNodeFloatOp" id="VisualShaderNodeFloatOp_jy5sl"]
default_input_values = [0, 0.4, 1, 0.34]
operator = 2

[sub_resource type="VisualShaderNodeInput" id="VisualShaderNodeInput_ougk8"]
input_name = "time"

[sub_resource type="VisualShaderNodeFloatFunc" id="VisualShaderNodeFloatFunc_xxluj"]
function = 0

[sub_resource type="VisualShaderNodeFloatOp" id="VisualShaderNodeFloatOp_l4moe"]
default_input_values = [0, 0.0, 1, 6.0]
operator = 3

[sub_resource type="VisualShaderNodeFloatOp" id="VisualShaderNodeFloatOp_6wo3h"]

[sub_resource type="VisualShaderNodeFloatOp" id="VisualShaderNodeFloatOp_vf1lr"]
default_input_values = [0, 0.0, 1, 20.0]
operator = 3

[sub_resource type="VisualShaderNodeExpression" id="VisualShaderNodeExpression_qsigc"]
size = Vector2(740, 340)
expression = "float worley = worley(UV, SCALE, SCALE);
COLOR = vec4(vec3(worley), 1.0);"

[sub_resource type="VisualShaderNodeMix" id="VisualShaderNodeMix_t6kle"]
default_input_values = [0, Vector3(0, 0, 0), 1, Vector3(1, 1, 1), 2, Vector3(0.5, 0.5, 0.5)]
op_type = 3

[sub_resource type="VisualShaderNodeColorConstant" id="VisualShaderNodeColorConstant_cw44y"]
constant = Color(0, 0.171592, 1, 1)

[sub_resource type="VisualShaderNodeExpression" id="VisualShaderNodeExpression_3up1t"]
size = Vector2(740, 340)
expression = "float worley = worley(UV, SCALE, SCALE);
COLOR = vec4(vec3(worley), 1.0);"

[sub_resource type="VisualShaderNodeFloatConstant" id="VisualShaderNodeFloatConstant_ybfbd"]
constant = -0.006

[sub_resource type="VisualShaderNodeFloatConstant" id="VisualShaderNodeFloatConstant_elvtu"]
constant = 0.007

[sub_resource type="VisualShaderNodeColorConstant" id="VisualShaderNodeColorConstant_2uq4w"]
constant = Color(0.968627, 0.87882, 0, 1)

[sub_resource type="VisualShaderNodeInput" id="VisualShaderNodeInput_t6aa3"]
output_port_for_preview = 0
input_name = "uv"

[sub_resource type="VisualShaderNodeColorConstant" id="VisualShaderNodeColorConstant_jij4m"]
constant = Color(0.933333, 0.179479, 0.119072, 1)

[sub_resource type="VisualShaderNodeMix" id="VisualShaderNodeMix_v11an"]
default_input_values = [0, Vector3(0, 0, 0), 1, Vector3(1, 1, 1), 2, Vector3(0.5, 0.5, 0.5)]
op_type = 3

[sub_resource type="VisualShaderNodeMix" id="VisualShaderNodeMix_a1w83"]
default_input_values = [0, Vector3(0, 0, 0), 1, Vector3(1, 1, 1), 2, Vector3(0, 0, 0)]
op_type = 3

[sub_resource type="VisualShaderNodeFloatConstant" id="VisualShaderNodeFloatConstant_l2jy6"]
constant = 0.443

[sub_resource type="VisualShaderNodeVectorOp" id="VisualShaderNodeVectorOp_u8037"]
operator = 2

[sub_resource type="VisualShaderNodeVectorOp" id="VisualShaderNodeVectorOp_5ke2a"]
operator = 3

[sub_resource type="VisualShaderNodeGlobalExpression" id="VisualShaderNodeGlobalExpression_7kv7s"]
size = Vector2(860, 940)
expression = "// stolen from https://godotshaders.com/snippet/voronoi/

vec2 random(vec2 uv) {
	return vec2(fract(sin(dot(uv.xy,
		vec2(12.9898,78.233))) * 43758.5453123));
}

float worley(vec2 uv, float columns, float rows) {
	
	vec2 index_uv = floor(vec2(uv.x * columns, uv.y * rows));
	vec2 fract_uv = fract(vec2(uv.x * columns, uv.y * rows));
	
	float minimum_dist = 1.0;  
	
	for (int y= -1; y <= 1; y++) {
		for (int x= -1; x <= 1; x++) {
			vec2 neighbor = vec2(float(x),float(y));
			vec2 point = random(index_uv + neighbor);
			
			vec2 diff = neighbor + point - fract_uv;
			float dist = length(diff);
			minimum_dist = min(minimum_dist, dist);
		}
	}
	
	return minimum_dist;
}"

[sub_resource type="VisualShaderNodeVectorFunc" id="VisualShaderNodeVectorFunc_xalb6"]
function = 11

[sub_resource type="VisualShaderNodeVectorOp" id="VisualShaderNodeVectorOp_hmsa7"]
output_port_for_preview = 0
default_input_values = [0, Vector2(0, 0), 1, Vector2(-0.5, -0.5)]
op_type = 0

[sub_resource type="VisualShaderNodeVec2Parameter" id="VisualShaderNodeVec2Parameter_lga5d"]
parameter_name = "CurrentDirection"

[sub_resource type="VisualShaderNodeVectorOp" id="VisualShaderNodeVectorOp_t36tf"]
default_input_values = [0, Vector2(0, 0), 1, Vector2(0, 0)]
op_type = 0
operator = 2

[sub_resource type="VisualShaderNodeUVFunc" id="VisualShaderNodeUVFunc_fe7mb"]
default_input_values = [1, Vector2(1, 1), 2, Vector2(3.98, 0)]

[sub_resource type="VisualShaderNodeInput" id="VisualShaderNodeInput_jq8vr"]
input_name = "time"

[sub_resource type="VisualShaderNodeVectorFunc" id="VisualShaderNodeVectorFunc_gmj74"]
function = 32

[sub_resource type="VisualShaderNodeMix" id="VisualShaderNodeMix_qpr0u"]
default_input_values = [0, Vector3(0, 0, 0), 1, Vector3(1, 1, 1), 2, Vector3(0, 0, 0)]
op_type = 3

[sub_resource type="VisualShaderNodeFloatFunc" id="VisualShaderNodeFloatFunc_t8xqe"]
function = 0

[sub_resource type="VisualShaderNodeInput" id="VisualShaderNodeInput_jdl3q"]
input_name = "time"

[sub_resource type="VisualShaderNodeFloatOp" id="VisualShaderNodeFloatOp_rbift"]
default_input_values = [0, 0.0, 1, 10.0]
operator = 3

[sub_resource type="VisualShaderNodeColorConstant" id="VisualShaderNodeColorConstant_f78te"]
constant = Color(0.304488, 0.929412, 0, 1)

[sub_resource type="VisualShaderNodeFloatOp" id="VisualShaderNodeFloatOp_6u3v1"]
default_input_values = [0, 0.0, 1, 1.0]

[sub_resource type="VisualShaderNodeFloatOp" id="VisualShaderNodeFloatOp_wdtgj"]
default_input_values = [0, 0.0, 1, 2.0]
operator = 3

[sub_resource type="VisualShaderNodeIntConstant" id="VisualShaderNodeIntConstant_lbbcc"]
constant = 6

[sub_resource type="VisualShaderNodeFloatFunc" id="VisualShaderNodeFloatFunc_jldae"]
function = 1

[sub_resource type="VisualShader" id="VisualShader_vf6yc"]
code = "shader_type canvas_item;
render_mode blend_mix;

uniform vec2 CurrentDirection;


// GlobalExpression:0
	// stolen from https://godotshaders.com/snippet/voronoi/
	
	vec2 random(vec2 uv) {
		return vec2(fract(sin(dot(uv.xy,
			vec2(12.9898,78.233))) * 43758.5453123));
	}
	
	float worley(vec2 uv, float columns, float rows) {
		
		vec2 index_uv = floor(vec2(uv.x * columns, uv.y * rows));
		vec2 fract_uv = fract(vec2(uv.x * columns, uv.y * rows));
		
		float minimum_dist = 1.0;  
		
		for (int y= -1; y <= 1; y++) {
			for (int x= -1; x <= 1; x++) {
				vec2 neighbor = vec2(float(x),float(y));
				vec2 point = random(index_uv + neighbor);
				
				vec2 diff = neighbor + point - fract_uv;
				float dist = length(diff);
				minimum_dist = min(minimum_dist, dist);
			}
		}
		
		return minimum_dist;
	}

void fragment() {
// ColorConstant:29
	vec4 n_out29p0 = vec4(0.968627, 0.878820, 0.000000, 1.000000);


// ColorConstant:69
	vec4 n_out69p0 = vec4(0.304488, 0.929412, 0.000000, 1.000000);


// Input:66
	float n_out66p0 = TIME;


// FloatOp:68
	float n_in68p1 = 10.00000;
	float n_out68p0 = n_out66p0 / n_in68p1;


// FloatFunc:65
	float n_out65p0 = sin(n_out68p0);


// FloatOp:70
	float n_in70p1 = 1.00000;
	float n_out70p0 = n_out65p0 + n_in70p1;


// FloatOp:71
	float n_in71p1 = 2.00000;
	float n_out71p0 = n_out70p0 / n_in71p1;


// Mix:64
	vec3 n_out64p0 = mix(vec3(n_out29p0.xyz), vec3(n_out69p0.xyz), vec3(n_out71p0));


// ColorConstant:23
	vec4 n_out23p0 = vec4(0.000000, 0.171592, 1.000000, 1.000000);


// Input:3
	vec2 n_out3p0 = UV;


// VectorOp:45
	vec2 n_in45p1 = vec2(-0.50000, -0.50000);
	vec2 n_out45p0 = n_out3p0 + n_in45p1;


// VectorDecompose:10
	float n_out10p0 = n_out45p0.x;
	float n_out10p1 = n_out45p0.y;


// Input:14
	float n_out14p0 = TIME;


// FloatOp:19
	float n_in19p1 = 20.00000;
	float n_out19p0 = n_out14p0 / n_in19p1;


// FloatFunc:16
	float n_out16p0 = sin(n_out19p0);


// FloatOp:17
	float n_in17p1 = 6.00000;
	float n_out17p0 = n_out16p0 / n_in17p1;


// FloatOp:18
	float n_in18p0 = 0.00000;
	float n_out18p0 = n_in18p0 + n_out10p0;


// FloatOp:13
	float n_out13p0 = n_out17p0 * n_out18p0;


// FloatFunc:9
	float n_out9p0 = cos(n_out13p0);


// FloatOp:12
	float n_out12p0 = n_out9p0 + n_out10p1;


// VectorCompose:11
	vec2 n_out11p0 = vec2(n_out10p0, n_out12p0);


// Vector2Parameter:47
	vec2 n_out47p0 = CurrentDirection;


// Input:6
	float n_out6p0 = TIME;


// VectorOp:48
	vec2 n_out48p0 = n_out47p0 * vec2(n_out6p0);


// UVFunc:5
	vec2 n_in5p1 = vec2(1.00000, 1.00000);
	vec2 n_out5p0 = n_out48p0 * n_in5p1 + n_out11p0;


// FloatConstant:27
	float n_out27p0 = -0.006000;


	vec4 n_out2p0;
// Expression:2
	n_out2p0 = vec4(0.0, 0.0, 0.0, 0.0);
	{
		float worley = worley(n_out5p0, n_out27p0, n_out27p0);
		n_out2p0 = vec4(vec3(worley), 1.0);
	}


// VectorFunc:63
	vec3 n_out63p0 = vec3(1.0) - vec3(n_out2p0.xyz);


// Mix:21
	vec3 n_out21p0 = mix(n_out64p0, vec3(n_out23p0.xyz), n_out63p0);


// ColorConstant:30
	vec4 n_out30p0 = vec4(0.933333, 0.179479, 0.119072, 1.000000);


// FloatConstant:28
	float n_out28p0 = 0.007000;


	vec4 n_out25p0;
// Expression:25
	n_out25p0 = vec4(0.0, 0.0, 0.0, 0.0);
	{
		float worley = worley(n_out5p0, n_out28p0, n_out28p0);
		n_out25p0 = vec4(vec3(worley), 1.0);
	}


// Mix:32
	vec3 n_out32p0 = mix(n_out64p0, vec3(n_out30p0.xyz), vec3(n_out25p0.xyz));


// FloatConstant:34
	float n_out34p0 = 0.443000;


// Mix:33
	vec3 n_out33p0 = mix(n_out21p0, n_out32p0, vec3(n_out34p0));


// IntConstant:72
	int n_out72p0 = 6;


// VectorOp:37
	vec3 n_out37p0 = n_out33p0 * vec3(float(n_out72p0));


// VectorFunc:40
	vec3 n_out40p0 = ceil(n_out37p0);


// VectorOp:39
	vec3 n_out39p0 = n_out40p0 / vec3(float(n_out72p0));


// Output:0
	COLOR.rgb = n_out39p0;


}
"
graph_offset = Vector2(-714.482, 117.229)
mode = 1
flags/light_only = false
nodes/fragment/0/position = Vector2(3960, 320)
nodes/fragment/2/node = SubResource("VisualShaderNodeExpression_qsigc")
nodes/fragment/2/position = Vector2(-740, 40)
nodes/fragment/2/size = Vector2(740, 340)
nodes/fragment/2/input_ports = "0,3,UV;1,0,SCALE;"
nodes/fragment/2/output_ports = "0,5,COLOR;"
nodes/fragment/2/expression = "float worley = worley(UV, SCALE, SCALE);
COLOR = vec4(vec3(worley), 1.0);"
nodes/fragment/3/node = SubResource("VisualShaderNodeInput_t6aa3")
nodes/fragment/3/position = Vector2(-4100, 100)
nodes/fragment/4/node = SubResource("VisualShaderNodeGlobalExpression_7kv7s")
nodes/fragment/4/position = Vector2(-820, -940)
nodes/fragment/4/size = Vector2(860, 940)
nodes/fragment/4/input_ports = ""
nodes/fragment/4/output_ports = ""
nodes/fragment/4/expression = "// stolen from https://godotshaders.com/snippet/voronoi/

vec2 random(vec2 uv) {
	return vec2(fract(sin(dot(uv.xy,
		vec2(12.9898,78.233))) * 43758.5453123));
}

float worley(vec2 uv, float columns, float rows) {
	
	vec2 index_uv = floor(vec2(uv.x * columns, uv.y * rows));
	vec2 fract_uv = fract(vec2(uv.x * columns, uv.y * rows));
	
	float minimum_dist = 1.0;  
	
	for (int y= -1; y <= 1; y++) {
		for (int x= -1; x <= 1; x++) {
			vec2 neighbor = vec2(float(x),float(y));
			vec2 point = random(index_uv + neighbor);
			
			vec2 diff = neighbor + point - fract_uv;
			float dist = length(diff);
			minimum_dist = min(minimum_dist, dist);
		}
	}
	
	return minimum_dist;
}"
nodes/fragment/5/node = SubResource("VisualShaderNodeUVFunc_fe7mb")
nodes/fragment/5/position = Vector2(-1260, 60)
nodes/fragment/6/node = SubResource("VisualShaderNodeInput_jq8vr")
nodes/fragment/6/position = Vector2(-2340, 860)
nodes/fragment/9/node = SubResource("VisualShaderNodeFloatFunc_jldae")
nodes/fragment/9/position = Vector2(-2160, -240)
nodes/fragment/10/node = SubResource("VisualShaderNodeVectorDecompose_hpj56")
nodes/fragment/10/position = Vector2(-2980, 60)
nodes/fragment/11/node = SubResource("VisualShaderNodeVectorCompose_251it")
nodes/fragment/11/position = Vector2(-1520, 40)
nodes/fragment/12/node = SubResource("VisualShaderNodeFloatOp_4eff3")
nodes/fragment/12/position = Vector2(-1940, 240)
nodes/fragment/13/node = SubResource("VisualShaderNodeFloatOp_jy5sl")
nodes/fragment/13/position = Vector2(-2460, -220)
nodes/fragment/14/node = SubResource("VisualShaderNodeInput_ougk8")
nodes/fragment/14/position = Vector2(-4000, -180)
nodes/fragment/16/node = SubResource("VisualShaderNodeFloatFunc_xxluj")
nodes/fragment/16/position = Vector2(-3160, -280)
nodes/fragment/17/node = SubResource("VisualShaderNodeFloatOp_l4moe")
nodes/fragment/17/position = Vector2(-2860, -300)
nodes/fragment/18/node = SubResource("VisualShaderNodeFloatOp_6wo3h")
nodes/fragment/18/position = Vector2(-2720, -100)
nodes/fragment/19/node = SubResource("VisualShaderNodeFloatOp_vf1lr")
nodes/fragment/19/position = Vector2(-3460, -220)
nodes/fragment/21/node = SubResource("VisualShaderNodeMix_t6kle")
nodes/fragment/21/position = Vector2(2260, 140)
nodes/fragment/23/node = SubResource("VisualShaderNodeColorConstant_cw44y")
nodes/fragment/23/position = Vector2(1700, 340)
nodes/fragment/25/node = SubResource("VisualShaderNodeExpression_3up1t")
nodes/fragment/25/position = Vector2(-740, 400)
nodes/fragment/25/size = Vector2(740, 340)
nodes/fragment/25/input_ports = "0,3,UV;1,0,SCALE;"
nodes/fragment/25/output_ports = "0,5,COLOR;"
nodes/fragment/25/expression = "float worley = worley(UV, SCALE, SCALE);
COLOR = vec4(vec3(worley), 1.0);"
nodes/fragment/27/node = SubResource("VisualShaderNodeFloatConstant_ybfbd")
nodes/fragment/27/position = Vector2(-1200, 360)
nodes/fragment/28/node = SubResource("VisualShaderNodeFloatConstant_elvtu")
nodes/fragment/28/position = Vector2(-1180, 520)
nodes/fragment/29/node = SubResource("VisualShaderNodeColorConstant_2uq4w")
nodes/fragment/29/position = Vector2(1120, 480)
nodes/fragment/30/node = SubResource("VisualShaderNodeColorConstant_jij4m")
nodes/fragment/30/position = Vector2(1700, 580)
nodes/fragment/32/node = SubResource("VisualShaderNodeMix_v11an")
nodes/fragment/32/position = Vector2(2320, 560)
nodes/fragment/33/node = SubResource("VisualShaderNodeMix_a1w83")
nodes/fragment/33/position = Vector2(2600, 240)
nodes/fragment/34/node = SubResource("VisualShaderNodeFloatConstant_l2jy6")
nodes/fragment/34/position = Vector2(2300, 360)
nodes/fragment/37/node = SubResource("VisualShaderNodeVectorOp_u8037")
nodes/fragment/37/position = Vector2(3200, 220)
nodes/fragment/39/node = SubResource("VisualShaderNodeVectorOp_5ke2a")
nodes/fragment/39/position = Vector2(3640, 220)
nodes/fragment/40/node = SubResource("VisualShaderNodeVectorFunc_xalb6")
nodes/fragment/40/position = Vector2(3420, 220)
nodes/fragment/45/node = SubResource("VisualShaderNodeVectorOp_hmsa7")
nodes/fragment/45/position = Vector2(-3500, 140)
nodes/fragment/47/node = SubResource("VisualShaderNodeVec2Parameter_lga5d")
nodes/fragment/47/position = Vector2(-2300, 500)
nodes/fragment/48/node = SubResource("VisualShaderNodeVectorOp_t36tf")
nodes/fragment/48/position = Vector2(-1580, 380)
nodes/fragment/63/node = SubResource("VisualShaderNodeVectorFunc_gmj74")
nodes/fragment/63/position = Vector2(860, 100)
nodes/fragment/64/node = SubResource("VisualShaderNodeMix_qpr0u")
nodes/fragment/64/position = Vector2(1460, 420)
nodes/fragment/65/node = SubResource("VisualShaderNodeFloatFunc_t8xqe")
nodes/fragment/65/position = Vector2(640, 800)
nodes/fragment/66/node = SubResource("VisualShaderNodeInput_jdl3q")
nodes/fragment/66/position = Vector2(-40, 800)
nodes/fragment/68/node = SubResource("VisualShaderNodeFloatOp_rbift")
nodes/fragment/68/position = Vector2(400, 760)
nodes/fragment/69/node = SubResource("VisualShaderNodeColorConstant_f78te")
nodes/fragment/69/position = Vector2(1120, 600)
nodes/fragment/70/node = SubResource("VisualShaderNodeFloatOp_6u3v1")
nodes/fragment/70/position = Vector2(900, 740)
nodes/fragment/71/node = SubResource("VisualShaderNodeFloatOp_wdtgj")
nodes/fragment/71/position = Vector2(1120, 740)
nodes/fragment/72/node = SubResource("VisualShaderNodeIntConstant_lbbcc")
nodes/fragment/72/position = Vector2(2960, 460)
nodes/fragment/connections = PackedInt32Array(5, 0, 2, 0, 11, 0, 5, 0, 9, 0, 12, 0, 10, 0, 11, 0, 10, 1, 12, 1, 12, 0, 11, 1, 16, 0, 17, 0, 10, 0, 18, 1, 14, 0, 19, 0, 19, 0, 16, 0, 13, 0, 9, 0, 5, 0, 25, 0, 21, 0, 33, 0, 32, 0, 33, 1, 34, 0, 33, 2, 33, 0, 37, 0, 37, 0, 40, 0, 40, 0, 39, 0, 27, 0, 2, 1, 3, 0, 45, 0, 28, 0, 25, 1, 45, 0, 10, 0, 18, 0, 13, 1, 17, 0, 13, 0, 30, 0, 32, 1, 23, 0, 21, 1, 6, 0, 48, 1, 2, 0, 63, 0, 63, 0, 21, 2, 25, 0, 32, 2, 29, 0, 64, 0, 64, 0, 21, 0, 64, 0, 32, 0, 66, 0, 68, 0, 68, 0, 65, 0, 69, 0, 64, 1, 70, 0, 71, 0, 65, 0, 70, 0, 71, 0, 64, 2, 48, 0, 5, 2, 47, 0, 48, 0, 72, 0, 37, 1, 72, 0, 39, 1, 39, 0, 0, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_j6qo3"]
shader = SubResource("VisualShader_vf6yc")
shader_parameter/CurrentDirection = Vector2(0, -15)

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_k74tq"]
width = 2527
height = 1412

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2w4ik")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -314.0
offset_top = 58.155
offset_right = 316.0
offset_bottom = 378.155
grow_horizontal = 2
texture = ExtResource("2_676j5")

[node name="StartButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -141.0
offset_top = -195.0
offset_right = 142.001
offset_bottom = -120.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_aap2y")
theme_override_font_sizes/font_size = 48
text = "Start Game!"

[node name="CreditsButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 434.0
offset_top = -66.0
offset_right = 560.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_aap2y")
theme_override_font_sizes/font_size = 24
text = "Credits"

[node name="Background" type="Sprite2D" parent="."]
z_index = -100
material = SubResource("ShaderMaterial_j6qo3")
position = Vector2(572.5, 322.5)
scale = Vector2(0.460229, 0.46813)
texture = SubResource("NoiseTexture2D_k74tq")

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_credits_button_pressed"]
